wx-core/include/generated/ffi_t.h

// CLASS: wxTreeListCtrl
wxClassInfo *wxTreeListCtrl_CLASSINFO();
void wxTreeListCtrl_AssignImageList(wxTreeListCtrl * self, wxImageList * image_list);
void wxTreeListCtrl_SetImageList(wxTreeListCtrl * self, wxImageList * image_list);
int wxTreeListCtrl_AppendColumn(wxTreeListCtrl * self, const wxString * title, int width, wxAlignment align, int flags);
void wxTreeListCtrl_ClearColumns(wxTreeListCtrl * self);
int wxTreeListCtrl_WidthFor(const wxTreeListCtrl * self, const wxString * text);
void wxTreeListCtrl_DeleteAllItems(wxTreeListCtrl * self);
wxTreeListItem *wxTreeListCtrl_GetRootItem(const wxTreeListCtrl * self);
wxTreeListItem *wxTreeListCtrl_GetFirstItem(const wxTreeListCtrl * self);
wxTreeListItem *wxTreeListCtrl_GetSelection(const wxTreeListCtrl * self);
void wxTreeListCtrl_SelectAll(wxTreeListCtrl * self);
void wxTreeListCtrl_UnselectAll(wxTreeListCtrl * self);
bool wxTreeListCtrl_GetSortColumn(wxTreeListCtrl * self, unsigned * col, bool * ascending_order);
void wxTreeListCtrl_SetItemComparator(wxTreeListCtrl * self, wxTreeListItemComparator * comparator);
wxWindow * wxTreeListCtrl_GetView(const wxTreeListCtrl * self);
wxDataViewCtrl * wxTreeListCtrl_GetDataView(const wxTreeListCtrl * self);
wxTreeListCtrl *wxTreeListCtrl_new();
wxTreeListCtrl *wxTreeListCtrl_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxTreeListCtrl_Create(wxTreeListCtrl * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
// CLASS: wxTreeListItem
void wxTreeListItem_delete(wxTreeListItem *self);
wxTreeListItem *wxTreeListItem_new();
bool wxTreeListItem_IsOk(const wxTreeListItem * self);
// CLASS: wxTreeListItemComparator
void wxTreeListItemComparator_delete(wxTreeListItemComparator *self);
// CLASS: wxTreebook
wxClassInfo *wxTreebook_CLASSINFO();
wxTreebook *wxTreebook_new();
wxTreebook *wxTreebook_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxTreebook_AddSubPage(wxTreebook * self, wxWindow * page, const wxString * text, bool b_select, int image_id);
bool wxTreebook_CollapseNode(wxTreebook * self, size_t page_id);
bool wxTreebook_Create(wxTreebook * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxTreebook_ExpandNode(wxTreebook * self, size_t page_id, bool expand);
int wxTreebook_GetPageParent(const wxTreebook * self, size_t page);
bool wxTreebook_InsertSubPage(wxTreebook * self, size_t page_pos, wxWindow * page, const wxString * text, bool b_select, int image_id);
bool wxTreebook_IsNodeExpanded(const wxTreebook * self, size_t page_id);