wx-core/src/generated/ffi_t.rs


    // wxTreeListCtrl
    pub fn wxTreeListCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxTreeListCtrl_AssignImageList(self_: *mut c_void, image_list: *mut c_void);
    pub fn wxTreeListCtrl_SetImageList(self_: *mut c_void, image_list: *mut c_void);
    pub fn wxTreeListCtrl_AppendColumn(
        self_: *mut c_void,
        title: *const c_void,
        width: c_int,
        align: c_int,
        flags: c_int,
    ) -> c_int;
    // NOT_SUPPORTED: pub fn wxTreeListCtrl_GetColumnCount(self_: *const c_void) -> unsigned;
    // NOT_SUPPORTED: pub fn wxTreeListCtrl_DeleteColumn(self_: *mut c_void, col: unsigned) -> bool;
    pub fn wxTreeListCtrl_ClearColumns(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxTreeListCtrl_SetColumnWidth(self_: *mut c_void, col: unsigned, width: c_int);
    // NOT_SUPPORTED: pub fn wxTreeListCtrl_GetColumnWidth(self_: *const c_void, col: unsigned) -> c_int;
    pub fn wxTreeListCtrl_WidthFor(self_: *const c_void, text: *const c_void) -> c_int;
    // BLOCKED: pub fn wxTreeListCtrl_AppendItem(self_: *mut c_void, parent: wxTreeListItem, text: *const c_void, image_closed: c_int, image_opened: c_int, data: *mut c_void) -> wxTreeListItem;
    // BLOCKED: pub fn wxTreeListCtrl_InsertItem(self_: *mut c_void, parent: wxTreeListItem, previous: wxTreeListItem, text: *const c_void, image_closed: c_int, image_opened: c_int, data: *mut c_void) -> wxTreeListItem;
    // BLOCKED: pub fn wxTreeListCtrl_PrependItem(self_: *mut c_void, parent: wxTreeListItem, text: *const c_void, image_closed: c_int, image_opened: c_int, data: *mut c_void) -> wxTreeListItem;
    // BLOCKED: pub fn wxTreeListCtrl_DeleteItem(self_: *mut c_void, item: wxTreeListItem);
    pub fn wxTreeListCtrl_DeleteAllItems(self_: *mut c_void);
    pub fn wxTreeListCtrl_GetRootItem(self_: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxTreeListCtrl_GetItemParent(self_: *const c_void, item: wxTreeListItem) -> wxTreeListItem;
    // BLOCKED: pub fn wxTreeListCtrl_GetFirstChild(self_: *const c_void, item: wxTreeListItem) -> wxTreeListItem;
    // BLOCKED: pub fn wxTreeListCtrl_GetNextSibling(self_: *const c_void, item: wxTreeListItem) -> wxTreeListItem;
    pub fn wxTreeListCtrl_GetFirstItem(self_: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxTreeListCtrl_GetNextItem(self_: *const c_void, item: wxTreeListItem) -> wxTreeListItem;
    // NOT_SUPPORTED: pub fn wxTreeListCtrl_GetItemText(self_: *const c_void, item: wxTreeListItem, col: unsigned) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxTreeListCtrl_SetItemText(self_: *mut c_void, item: wxTreeListItem, col: unsigned, text: *const c_void);
    // BLOCKED: pub fn wxTreeListCtrl_SetItemText1(self_: *mut c_void, item: wxTreeListItem, text: *const c_void);
    // BLOCKED: pub fn wxTreeListCtrl_SetItemImage(self_: *mut c_void, item: wxTreeListItem, closed: c_int, opened: c_int);
    // BLOCKED: pub fn wxTreeListCtrl_GetItemData(self_: *const c_void, item: wxTreeListItem) -> *mut c_void;
    // BLOCKED: pub fn wxTreeListCtrl_SetItemData(self_: *mut c_void, item: wxTreeListItem, data: *mut c_void);
    // BLOCKED: pub fn wxTreeListCtrl_Expand(self_: *mut c_void, item: wxTreeListItem);
    // BLOCKED: pub fn wxTreeListCtrl_Collapse(self_: *mut c_void, item: wxTreeListItem);
    // BLOCKED: pub fn wxTreeListCtrl_IsExpanded(self_: *const c_void, item: wxTreeListItem) -> bool;
    pub fn wxTreeListCtrl_GetSelection(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxTreeListCtrl_GetSelections(self_: *const c_void, selections: *mut c_void) -> unsigned;
    // BLOCKED: pub fn wxTreeListCtrl_Select(self_: *mut c_void, item: wxTreeListItem);
    // BLOCKED: pub fn wxTreeListCtrl_Unselect(self_: *mut c_void, item: wxTreeListItem);
    // BLOCKED: pub fn wxTreeListCtrl_IsSelected(self_: *const c_void, item: wxTreeListItem) -> bool;
    pub fn wxTreeListCtrl_SelectAll(self_: *mut c_void);
    pub fn wxTreeListCtrl_UnselectAll(self_: *mut c_void);
    // BLOCKED: pub fn wxTreeListCtrl_EnsureVisible(self_: *mut c_void, item: wxTreeListItem);
    // BLOCKED: pub fn wxTreeListCtrl_CheckItem(self_: *mut c_void, item: wxTreeListItem, state: c_int);
    // BLOCKED: pub fn wxTreeListCtrl_CheckItemRecursively(self_: *mut c_void, item: wxTreeListItem, state: c_int);
    // BLOCKED: pub fn wxTreeListCtrl_UncheckItem(self_: *mut c_void, item: wxTreeListItem);
    // BLOCKED: pub fn wxTreeListCtrl_UpdateItemParentStateRecursively(self_: *mut c_void, item: wxTreeListItem);
    // BLOCKED: pub fn wxTreeListCtrl_GetCheckedState(self_: *const c_void, item: wxTreeListItem) -> c_int;
    // BLOCKED: pub fn wxTreeListCtrl_AreAllChildrenInState(self_: *const c_void, item: wxTreeListItem, state: c_int) -> bool;
    // NOT_SUPPORTED: pub fn wxTreeListCtrl_SetSortColumn(self_: *mut c_void, col: unsigned, ascending_order: bool);
    pub fn wxTreeListCtrl_GetSortColumn(
        self_: *mut c_void,
        col: *mut c_void,
        ascending_order: *mut c_void,
    ) -> bool;
    pub fn wxTreeListCtrl_SetItemComparator(self_: *mut c_void, comparator: *mut c_void);
    pub fn wxTreeListCtrl_GetView(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeListCtrl_GetDataView(self_: *const c_void) -> *mut c_void;
    pub fn wxTreeListCtrl_new() -> *mut c_void;
    pub fn wxTreeListCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxTreeListCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;

    // wxTreeListItem
    pub fn wxTreeListItem_delete(self_: *mut c_void);
    pub fn wxTreeListItem_new() -> *mut c_void;
    pub fn wxTreeListItem_IsOk(self_: *const c_void) -> bool;

    // wxTreeListItemComparator
    pub fn wxTreeListItemComparator_delete(self_: *mut c_void);
    // BLOCKED: pub fn wxTreeListItemComparator_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxTreeListItemComparator_Compare(self_: *mut c_void, treelist: *mut c_void, column: unsigned, first: wxTreeListItem, second: wxTreeListItem) -> c_int;
    // DTOR: pub fn wxTreeListItemComparator_~wxTreeListItemComparator(self_: *mut c_void);

    // wxTreebook
    pub fn wxTreebook_CLASSINFO() -> *mut c_void;
    pub fn wxTreebook_new() -> *mut c_void;
    pub fn wxTreebook_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxTreebook_~wxTreebook(self_: *mut c_void);
    pub fn wxTreebook_AddSubPage(
        self_: *mut c_void,
        page: *mut c_void,
        text: *const c_void,
        b_select: bool,
        image_id: c_int,
    ) -> bool;
    pub fn wxTreebook_CollapseNode(self_: *mut c_void, page_id: usize) -> bool;
    pub fn wxTreebook_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxTreebook_ExpandNode(self_: *mut c_void, page_id: usize, expand: bool) -> bool;
    pub fn wxTreebook_GetPageParent(self_: *const c_void, page: usize) -> c_int;
    pub fn wxTreebook_InsertSubPage(
        self_: *mut c_void,
        page_pos: usize,
        page: *mut c_void,
        text: *const c_void,
        b_select: bool,
        image_id: c_int,
    ) -> bool;
    pub fn wxTreebook_IsNodeExpanded(self_: *const c_void, page_id: usize) -> bool;

}
